Add second test